--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "metastellar-sdk",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
-  
+  "npm": "@metastellar/metastellar-sdk",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/metastellar-io/metastellar-sdk.git"
+  },
   "files": ["dist"],
   "main": "./dist/my-lib.umd.cjs",
   "module": "./dist/my-lib.js",
